* figure out some sort of declarative API that doesn't suck...
  # protect_with_brain_buster :create => :show, :validate => :update, :on_failure => :show
  # protect :update, :from => [:show, :index]
  # brain_buster_form_on :show, :protect => :update

HEAD
* convert to new style describe/it in specs
* fix tests for Rails 2.1 and the view path changes

0.8.1 2008/02/22
* use append_view_paths instead of directly appending to it, for edge rails compatibility [Hashrocket]
* remove #send for 1.9 compatibility

0.8.0 2008/02/12
* clean up all over the place
* fix for Rails 2 compatibility - return false doesn't halt the filter chain
* rename brain_buster_error_message to brain_buster_failure_message
* change captcha_failure so it just places failure message into the flash, and also render :text's it -- you must override render_or_redirect_for_captcha_failure to handle failure yourself in a smarter way!
* change captcha failure to *only render the failure message text* -- you have to handle failure yourself for a better user experience!
* move to github
* move project tracking to Relevance open source trac

0.7.2 (never officially released)
* add a default salt to make setup easier
* add info on the salt to readme
* rename BrainBusterFilters to BrainBusterSystem, since it has more then just filters in it
* more test cleanup

0.7
* move code to google code hosting, so that there is actual infrastructure in place besides a page on my blog
* add the MIT license -- this was always the license, just forgot to include the file
* add mocha and test/spec as requirements for the test suite
* update old tests to use test/spec and stub out AR, so we don't need a database
* major functionality overhaul, using fine grained filters (in BrainBustersSystem) instead of a method you need to call from w/i your controller
* add a new salting of the cookie values, set via @controller.brain_buster_salt= or ApplicationController.brain_buster_salt=.